# langchain-agentic-patterns

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/decisions/: 0001-langgraph-primitives-over-deepagents.md  README.md
