[project]
name = "langchain-agentic-patterns"
version = "0.1.0"
description = "A production AI agent built from LangGraph and LangChain primitives — deep research, voice, and tools."
readme = "README.md"
authors = [
    { name = "Son Dang Dinh", email = "samson.ailabs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "faber"
